     multiplied by the maximum value of the RHS over the entire domain.
     On the coarse grid, then, the absolute tolerance is 4*pi*G*rho_max*abs_tol,
     and on fine grids this is multiplied by ref_ratio**2. If you do not
     specify gravity.abs_tol, then a reasonable value is selected for the
     coarse level, and the same scheme is used to give it reasonable values
     on the fine levels as well. The parameters gravity.ml_tol,
     gravity.delta_tol, and gravity.sl_tol no longer have any effect.

  -- the radiation hydro solver, that used to live in
     CastroRadiation.git has now been completely integrated into
     the main Castro git repo.  The history was preserved in the
     transition (issues #24, #31)

     The radiation build variable Network_inputs was renamed
     to NETWORK_INPUTS for consistency.

     The EOSes that used to come with CastroRadiation are available
     in Microphysics.git

  -- enthalpy and temperature diffusion are now properly time-centered
     (issue #22)
  
  -- a flux limiter has been added that limits the size of the hydro
     fluxes if they would cause rho or (rho e) to go negative. This
     can be used with castro.limit_hydro_fluxes_on_small_dens = 1.

  -- a bug for single-level problems with Poisson gravity has been
     fixed where the multi-grid tolerance was being set to an
     uninitialized value

  -- a flaw in the source terms for the primitive variables in the
     hydro update has been fixed, so that source terms like gravity
     should no longer affect the pressure and (rho e) interface states
     (issue #19)

  -- the prediction of source terms to the half-time used in the
     hydrodynamics reconstruction was not being done properly.
     This has been fixed (issue #18)

  -- the radiation hydro ppm now implements the ppm_predict_gammae
     option

  -- we no longer ship VODE or BLAS with Castro -- these are provided
     by the separate Microphysics git repo
